# bzlmod_demo

./: BUILD  MODULE.bazel  README.md  WORKSPACE  pom.xml
src/main/java/com/example/: test.java
